<resources>
    <string name="app_name">Azaro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_add_course">Add Course</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

    <!-- Strings for Course -->
    <string name="save_button">SAVE!</string>
    <string name="course_name">Name of Course</string>
    <string name="course_location">Location of Course</string>
    <string name="course_time">Start/End Time               (for 11 oclock write 11)</string>
    <string name="course_start_time">StartTime</string>
    <string name="course_end_time">EndTime</string>
    <string name="course_term">Term</string>
    <string name="course_am_pm">am or pm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_task">AddTaskActivity</string>


</resources>
