<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="shreyas.io.weld.azaro.AddCourseActivity">


            <EditText
                android:id="@+id/EditCourseLocation"
                android:layout_height="wrap_content"
                android:hint="@string/course_location"
                android:inputType="textPostalAddress"
                android:layout_width="fill_parent">
            </EditText>

            <TextView
                android:id="@+id/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_time"
                android:textSize="10pt">
            </TextView>
            <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/EditCourseStartTime"
                    android:layout_height="wrap_content"
                    android:hint="@string/course_start_time"
                    android:inputType="time"
                    android:layout_width="fill_parent"
                    android:layout_weight="1">
                </EditText>
                <EditText
                    android:id="@+id/EditCourseEndTime"
                    android:layout_height="wrap_content"
                    android:hint="@string/course_end_time"
                    android:inputType="time"
                    android:layout_width="fill_parent" android:layout_weight="1">
                </EditText>
                <EditText
                    android:id="@+id/EditCourseTimePeriod"
                    android:layout_height="wrap_content"
                    android:hint="@string/course_am_pm"
                    android:inputType="textCapWords"
                    android:layout_width="fill_parent"
                    android:layout_weight="1">
                </EditText>
        </LinearLayout>


            <Button
                android:id="@+id/save_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/save_button"
                android:textStyle="bold" />



</LinearLayout>
